--- a/ui/components/vm-detail/aws-vm-basic-details.html
+++ b/ui/components/vm-detail/aws-vm-basic-details.html
@@ -4,70 +4,58 @@
 <link rel="import" href="../user-name/user-name.html">
 
 <dom-module id="aws-vm-basic-details">
-  <link rel="import" type="css" href="../../css/component-common.css">
-  <link rel="import" type="css" href="detail-tables.css">
+<link rel="import" type="css" href="../../css/component-common.css">
+<link rel="import" type="css" href="detail-tables.css">
 
-  <template>
-    <div class="item">
-      <table>
-        <tr>
-          <td>Name</td>
-          <td>[[_getName(vm)]]</td>
-        </tr>
-        <tr>
-          <td>Public IP</td>
-          <td>[[vm.aws_vm.ip_address]]</td>
-        </tr>
-        <tr>
-          <td>Private IP</td>
-          <td>[[vm.aws_vm.private_ip_address]]</td>
-        </tr>
-        <tr>
-          <td>AWS state</td>
-          <td>[[vm.aws_vm.state]]</td>
-        </tr>
-        <tr>
-          <td>Last status check</td>
-          <td>
-            <template is="dom-if" if="[[vm.vm.status_updated_at]]" restamp>
-              <local-date date-string="[[vm.vm.status_updated_at]]" hide-millis
-                ></local-date>
-            </template>
-            <template is="dom-if" if="[[!vm.vm.status_updated_at]]">
-              –
-            </template>
-          </td>
-        </tr>
-      </table>
-    </div>
+<template>
+  <div class="item">
+    <table>
+      <tr>
+        <td>Name</td>
+        <td>[[_getName(vm)]]</td>
+      </tr>
+      <tr>
+        <td>Public IP</td>
+        <td>[[vm.aws_vm.ip_address]]</td>
+      </tr>
+      <tr>
+        <td>Private IP</td>
+        <td>[[vm.aws_vm.private_ip_address]]</td>
+      </tr>
+      <tr>
+        <td>AWS state</td>
+        <td>[[vm.aws_vm.state]]</td>
+      </tr>
+      <tr>
+        <td>Last status check</td>
+        <td>
+          <local-date date-string="[[vm.status_updated_at]]" hide-millis>
+          </local-date>
+        </td>
+      </tr>
+    </table>
+  </div>
 
-    <div class="item">
-      <table>
-        <tr>
-          <td>Comment</td>
-          <td>[[vm.vm.comment]]</td>
-        </tr>
-        <tr>
-          <td>Created by</td>
-          <td>
-            <template is="dom-if" if="[[vm.vm.created_by]]" restamp>
-              <user-name userid="[[vm.vm.created_by]]"></user-name>
-            </template>
-            <template is="dom-if" if="[[!vm.vm.created_by]]">
-              –
-            </template>
-          </td>
-        </tr>
-        <tr>
-          <td>Created at</td>
-          <td>
-            <local-date date-string="[[vm.vm.created_at]]"
-              hide-millis></local-date>
-          </td>
-        </tr>
-      </table>
-    </div>
-  </template>
+  <div class="item">
+    <table>
+      <tr>
+        <td>Comment</td>
+        <td>[[vm.comment]]</td>
+      </tr>
+      <tr>
+        <td>Created by</td>
+        <td>[[vm.created_by.username]]</td>
+      </tr>
+      <tr>
+        <td>Created at</td>
+        <td>
+          <local-date date-string="[[vm.created_at]]" hide-millis>
+          </local-date>
+        </td>
+      </tr>
+    </table>
+  </div>
+</template>
 </dom-module>
 
 <script src="aws-vm-basic-details.js"></script>
