Create-VM component WIP, keep Serializer information when nested API results

--- a/ui/components/audit-display/audit-display.html
+++ b/ui/components/audit-display/audit-display.html
@@ -17,7 +17,7 @@
   <template>
     <iron-ajax
       id="ajax"
-      url="/api/audit/"
+      url="/api/awsaudit/"
       params='{"page":"1", "min_level":"1-INFO"}'
       handle-as="json"
       last-response="{{pageData}}"
