--- a/ui/components/create-schedule/create-schedule.html
+++ b/ui/components/create-schedule/create-schedule.html
@@ -43,7 +43,7 @@
     <paper-icon-button id="close" icon="close" on-click="_toggle">
     </paper-icon-button>
 
-    <form is="iron-form" id="form" method="post" content-type="application/json" action="[[createUrl]]">
+    <form is="iron-form" id="create-schedule-form" method="post" content-type="application/json" action="[[createUrl]]">
       <paper-input
         id="name"
         name="name"
