--- a/vimma/templates/vimma/test.html
+++ b/vimma/templates/vimma/test.html
@@ -10,5 +10,5 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="{% static 'bower_components/qunit/qunit/qunit.js' %}"></script>
-  <script src="{% static 'vimma/js/test.js' %}"></script>
+  <script src="{% static 'js/test.js' %}"></script>
 {% endblock %}
