--- a/ui/components/audit-display/audit-display.html
+++ b/ui/components/audit-display/audit-display.html
@@ -16,7 +16,7 @@
   <template>
     <iron-ajax
       id="ajax"
-      url="/api/awsaudit/"
+      url="/api/aws/audit/"
       params='{"page":"1", "min_level":"1-INFO"}'
       handle-as="json"
       last-response="{{pageData}}"
