--- a/ui/components/create-vm/create-vm.html
+++ b/ui/components/create-vm/create-vm.html
@@ -30,12 +30,12 @@
     last-response="{{projects}}">
   </iron-ajax>
 
-  <!-- Providers: Dummy, AWS -->
+  <!-- Providers: ,  -->
   <iron-ajax
     auto
-    id="providersDummy"
-    url="[[providersDummyUrl]]"
-    last-response="{{providersDummy}}">
+    id="providers"
+    url="[[providersUrl]]"
+    last-response="{{providers}}">
   </iron-ajax>
   <iron-ajax
     auto
