--- a/ui/components/vm-list/vm-list.html
+++ b/ui/components/vm-list/vm-list.html
@@ -17,7 +17,7 @@
   <iron-ajax
     auto
     id="vmAjax"
-    url="/api/dummyvms/"
+    url="/api/dummy/vm/"
     last-response="{{dummyvms}}">
   </iron-ajax>
 
@@ -40,7 +40,7 @@
   <plain-text class="error" text="[[_error]]"></plain-text>
 
   <div id="table-head">
-    <!-- Dummy buttons to align the table header with the vm rows -->
+    <!--  buttons to align the table header with the vm rows -->
     <paper-icon-button></paper-icon-button>
     <paper-icon-button></paper-icon-button>
 
