generic Audit model

--- a/ui/components/create-vm/create-vm.html
+++ b/ui/components/create-vm/create-vm.html
@@ -33,9 +33,9 @@
   <!-- Providers: ,  -->
   <iron-ajax
     auto
-    id="providers"
-    url="[[providersUrl]]"
-    last-response="{{providers}}">
+    id="providersDummy"
+    url="[[providersDummyUrl]]"
+    last-response="{{providersDummy}}">
   </iron-ajax>
   <iron-ajax
     auto
