--- a/ui/components/create-vm/create-vm.html
+++ b/ui/components/create-vm/create-vm.html
@@ -89,8 +89,8 @@
               hidden required>
             </paper-input>
             <paper-input
-              id="providerconfig"
-              name="providerconfig"
+              id="config"
+              name="config"
               hidden required>
             </paper-input>
           </td>
