--- a/vimma/templates/vimma/base.html
+++ b/vimma/templates/vimma/base.html
@@ -26,6 +26,8 @@
 
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
+  <script src="{% static 'js/dutils.js' %}"></script>
+  <script src="{% static 'js/dutils.conf.urls.js' %}"></script>
   <script src="{% static 'js/util.js' %}"></script>
   <script src="{% url 'base_js' %}"></script>
 
