--- a/ui/components/vms-tab/vms-tab.html
+++ b/ui/components/vms-tab/vms-tab.html
@@ -8,8 +8,17 @@
 
   <template>
     <create-vm on-vm-created="_vmCreated"></create-vm>
-    <vm-list id="list_alive" expanded></vm-list>
-    <vm-list destroyed></vm-list>
+
+    <h2>Dummy</h2>
+
+    <vm-list id="list_alive" name="dummy" expanded></vm-list>
+    <vm-list name="dummy" destroyed></vm-list>
+
+    <h2>AWS</h2>
+
+    <vm-list id="list_alive" name="aws" expanded></vm-list>
+    <vm-list name="aws" destroyed></vm-list>
+
   </template>
 </dom-module>
 
